chore: remove all version 2/2.0 references and update splash screen and docs to v1.0 b1 (1.0.0-beta.1)